src/test/compile-fail/bad-tag-export-2.rs
// error-pattern:b does not refer to an enumeration
import bad::*;

mod bad {
  export b::{};

  fn b() { fail; }
}

fn main() {
}